# WB_homework_1

./: README.md  Untitled.ipynb  pyproject.toml
