[tool.poetry]
name = "wb-python"
version = "0.1.0"
description = ""
authors = ["erickless <erikgarifullin4564@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.26.0"
pandas = "^2.1.1"
jupyterlab = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
